[build-system]
requires = [
  "setuptools>=19.6",
  "wheel",
  "Cython>=0.26.1",
  "numpy>=1.13.3",
]

[tool.black]
line-length = 88
# note : 'py39' is not an available option as of black 19.10b0
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'


[tool.isort]
profile = "black"
combine_as_imports = true
skip =  ["venv", "benchmarks"]
known_third_party = [
  "IPython",
  "nose",
  "numpy",
  "sympy",
  "matplotlib",
  "unyt",
  "git",
  "yaml",
  "dateutil",
  "requests",
  "coverage",
  "pytest",
  "pyx",
  "glue",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
