[metadata]
name = py_constr_field
version = 0.0.2
description = Compute correlations functions for Gaussian Random Fields.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/py_constr_field
license = MIT
classifiers =
    Development status :: 1 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Gaussian Random Field
authors = Corentin Cadiou <contact@cphyc.me>

[options]
packages = find:
py_modules = py_constr_field
install_requires =
    attrs
    colossus
    numba
    numexpr
    numpy
    opt-einsum
    pyfftw
    scipy
    shove
    tqdm
python_requires = >=3.8
include_package_data = True

[options.extras_require]
test =
    pytest

[bdist_wheel]
universal = True

[flake8]
max-line-length = 88
ignore = E203, # Whitespace before ':' (black compat)
    W503, # Line break before binary operator (black compat)
    E731, # Allow assignment to lambdas

[tool:pytest]
testpaths =
    tests
